// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for presentation 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-s7",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.1629,
      "x": 0.1415,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-sc",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.1629,
      "x": 0.4092,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-sh",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.1629,
      "x": 0.6193,
      "y": 0.7496,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3408,
      "id": "img-sm",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.1629,
      "x": 0.8294,
      "y": 0.7496,
    },
  ],
  "customSize": {
    "height": 1080,
    "width": 1920,
  },
  "design": {
    "backgroundId": "orb5",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0612,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.2514,
        "x": 0.1857,
        "y": 0.3996,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 89,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.197,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.327,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.0769,
          "y": 0.4036,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s4",
        "position": {
          "x": 0.06,
          "y": 0.504,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Managing Director & Co-Head of
Secondaries",
        "font": "onest",
        "fontSize": 16,
        "id": "text-s5",
        "position": {
          "x": 0.06,
          "y": 0.5344,
        },
        "simpleRole": "moderator.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "at Stifel",
        "font": "onest",
        "fontSize": 16,
        "id": "text-s6",
        "position": {
          "x": 0.06,
          "y": 0.56,
        },
        "simpleRole": "moderator.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s8",
        "letterSpacing": 1,
        "position": {
          "x": 0.08,
          "y": 0.8975,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s9",
        "position": {
          "x": 0.3277,
          "y": 0.5223,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sa",
        "position": {
          "x": 0.3277,
          "y": 0.5438,
        },
        "simpleRole": "speaker-0.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "Lightrock",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sb",
        "position": {
          "x": 0.3277,
          "y": 0.5607,
        },
        "simpleRole": "speaker-0.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sd",
        "letterSpacing": 1,
        "position": {
          "x": 0.3477,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 19,
        "id": "text-se",
        "position": {
          "x": 0.5378,
          "y": 0.5223,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Partner, Secondaries",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sf",
        "position": {
          "x": 0.5378,
          "y": 0.5438,
        },
        "simpleRole": "speaker-1.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "Molten",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sg",
        "position": {
          "x": 0.5378,
          "y": 0.5607,
        },
        "simpleRole": "speaker-1.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-si",
        "letterSpacing": 1,
        "position": {
          "x": 0.5578,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sj",
        "position": {
          "x": 0.7479,
          "y": 0.5223,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal & Head of Secondaries",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sk",
        "position": {
          "x": 0.7479,
          "y": 0.5438,
        },
        "simpleRole": "speaker-2.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "ISOMER Capital",
        "font": "onest",
        "fontSize": 14,
        "id": "text-sl",
        "position": {
          "x": 0.7479,
          "y": 0.5607,
        },
        "simpleRole": "speaker-2.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 16,
        "id": "text-sn",
        "letterSpacing": 1,
        "position": {
          "x": 0.7679,
          "y": 0.9013,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
    ],
  },
  "format": "presentation",
}
`;

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for square 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.3659,
      "id": "img-s4",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.3,
      "x": 0.21,
      "y": 0.6536,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-sc",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.185,
      "x": 0.4825,
      "y": 0.8272,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-sh",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.185,
      "x": 0.665,
      "y": 0.7503,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2056,
      "id": "img-sm",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.185,
      "x": 0.8475,
      "y": 0.6734,
    },
  ],
  "customSize": {
    "height": 1500,
    "width": 1500,
  },
  "design": {
    "backgroundId": "orb5",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0612,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.4431,
        "x": 0.2816,
        "y": 0.3811,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 109,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.1877,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 54,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.3085,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 54,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.385,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 29,
        "id": "text-s5",
        "letterSpacing": 1,
        "position": {
          "x": 0.08,
          "y": 0.8128,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 30,
        "id": "text-s6",
        "position": {
          "x": 0.39,
          "y": 0.4867,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Managing Director & Co-Head of
Secondaries",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s7",
        "position": {
          "x": 0.39,
          "y": 0.5171,
        },
        "simpleRole": "moderator.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "at Stifel",
        "font": "onest",
        "fontSize": 22,
        "id": "text-s8",
        "position": {
          "x": 0.39,
          "y": 0.5427,
        },
        "simpleRole": "moderator.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 27,
        "id": "text-s9",
        "position": {
          "x": 0.39,
          "y": 0.6675,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sa",
        "position": {
          "x": 0.39,
          "y": 0.689,
        },
        "simpleRole": "speaker-0.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "Lightrock",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sb",
        "position": {
          "x": 0.39,
          "y": 0.706,
        },
        "simpleRole": "speaker-0.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-sd",
        "letterSpacing": 1,
        "position": {
          "x": 0.41,
          "y": 0.9112,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 27,
        "id": "text-se",
        "position": {
          "x": 0.5725,
          "y": 0.5906,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Partner, Secondaries",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sf",
        "position": {
          "x": 0.5725,
          "y": 0.6121,
        },
        "simpleRole": "speaker-1.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "Molten",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sg",
        "position": {
          "x": 0.5725,
          "y": 0.6291,
        },
        "simpleRole": "speaker-1.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-si",
        "letterSpacing": 1,
        "position": {
          "x": 0.5925,
          "y": 0.8344,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 27,
        "id": "text-sj",
        "position": {
          "x": 0.755,
          "y": 0.5008,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.82)",
        "content": "Principal & Head of
Secondaries",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sk",
        "position": {
          "x": 0.755,
          "y": 0.5287,
        },
        "simpleRole": "speaker-2.title",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.64)",
        "content": "ISOMER Capital",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sl",
        "position": {
          "x": 0.755,
          "y": 0.5522,
        },
        "simpleRole": "speaker-2.company",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 23,
        "id": "text-sn",
        "letterSpacing": 1,
        "position": {
          "x": 0.775,
          "y": 0.7575,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
    ],
  },
  "format": "square",
}
`;

exports[`Panel Maker — 3 speakers + 1 moderator > layout is stable for story 1`] = `
{
  "canvasImages": [
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2708,
      "id": "img-s4",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "moderator.photo",
      "src": "/samples/pierre-leroy.jpg",
      "width": 0.428,
      "x": 0.274,
      "y": 0.4899,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2708,
      "id": "img-s8",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-0.photo",
      "src": "/samples/andrei-xydas.jpg",
      "width": 0.428,
      "x": 0.726,
      "y": 0.4899,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2708,
      "id": "img-sc",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-1.photo",
      "src": "/samples/nicholas-sando.jpg",
      "width": 0.428,
      "x": 0.274,
      "y": 0.7846,
    },
    {
      "border": true,
      "borderWidth": 0.0013,
      "cornerRadius": 8,
      "fit": "cover",
      "height": 0.2708,
      "id": "img-sg",
      "naturalHeight": undefined,
      "naturalWidth": undefined,
      "scrimBottom": 0.5,
      "simpleRole": "speaker-2.photo",
      "src": "/samples/omolade-adebisi.jpg",
      "width": 0.428,
      "x": 0.726,
      "y": 0.7846,
    },
  ],
  "customSize": {
    "height": 1920,
    "width": 1080,
  },
  "design": {
    "backgroundId": "orb5",
    "logoPosition": "bottom-left",
    "logoStyle": "white",
    "shapes": [
      {
        "blur": 0,
        "borderRadius": 0.22,
        "color1": "#FFFFFF",
        "color2": "#FF6B00",
        "colorType": "solid",
        "fillType": "fill",
        "height": 0.0344,
        "id": "shape-s2",
        "opacity": 1,
        "rotation": 0,
        "strokeWidth": 0,
        "type": "rectangle",
        "width": 0.447,
        "x": 0.2835,
        "y": 0.2883,
      },
    ],
    "showLogo": true,
    "texts": [
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Continuation Capital
& Venture Secondaries:",
        "font": "onest",
        "fontSize": 79,
        "id": "text-s0",
        "position": {
          "x": 0.06,
          "y": 0.1559,
        },
        "simpleRole": "headline",
        "weight": 600,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.95)",
        "content": "Financing the Next Phase of European Growth",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s1",
        "position": {
          "x": 0.06,
          "y": 0.2369,
        },
        "simpleRole": "subtitle",
        "weight": 500,
      },
      {
        "align": "left",
        "color": "#15110E",
        "content": "PANEL DISCUSSION",
        "font": "onest",
        "fontSize": 39,
        "id": "text-s3",
        "letterSpacing": 1,
        "position": {
          "x": 0.09,
          "y": 0.2905,
        },
        "simpleRole": "label",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "MODERATOR",
        "font": "onest",
        "fontSize": 15,
        "id": "text-s5",
        "letterSpacing": 1,
        "position": {
          "x": 0.076,
          "y": 0.5564,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Pierre Leroy",
        "font": "onest",
        "fontSize": 26,
        "id": "text-s6",
        "position": {
          "x": 0.076,
          "y": 0.5721,
        },
        "simpleRole": "moderator.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Managing Director & Co-Head of
Secondaries, at Stifel",
        "font": "onest",
        "fontSize": 19,
        "id": "text-s7",
        "position": {
          "x": 0.076,
          "y": 0.5945,
        },
        "simpleRole": "moderator.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 15,
        "id": "text-s9",
        "letterSpacing": 1,
        "position": {
          "x": 0.528,
          "y": 0.5661,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Andrei Xydas",
        "font": "onest",
        "fontSize": 26,
        "id": "text-sa",
        "position": {
          "x": 0.528,
          "y": 0.5818,
        },
        "simpleRole": "speaker-0.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Principal, Lightrock",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sb",
        "position": {
          "x": 0.528,
          "y": 0.5994,
        },
        "simpleRole": "speaker-0.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 15,
        "id": "text-sd",
        "letterSpacing": 1,
        "position": {
          "x": 0.076,
          "y": 0.8608,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Nicholas Sando",
        "font": "onest",
        "fontSize": 26,
        "id": "text-se",
        "position": {
          "x": 0.076,
          "y": 0.8765,
        },
        "simpleRole": "speaker-1.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Partner, Secondaries, Molten",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sf",
        "position": {
          "x": 0.076,
          "y": 0.8941,
        },
        "simpleRole": "speaker-1.secondary",
        "weight": 400,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "SPEAKER",
        "font": "onest",
        "fontSize": 15,
        "id": "text-sh",
        "letterSpacing": 1,
        "position": {
          "x": 0.528,
          "y": 0.8511,
        },
        "shadow": "0 1px 4px rgba(0,0,0,0.5)",
        "uppercase": true,
        "weight": 800,
      },
      {
        "align": "left",
        "color": "#FFFFFF",
        "content": "Omolade Adebisi",
        "font": "onest",
        "fontSize": 26,
        "id": "text-si",
        "position": {
          "x": 0.528,
          "y": 0.8668,
        },
        "simpleRole": "speaker-2.name",
        "weight": 700,
      },
      {
        "align": "left",
        "color": "rgba(255,255,255,0.88)",
        "content": "Principal & Head of Secondaries, ISOMER
Capital",
        "font": "onest",
        "fontSize": 19,
        "id": "text-sj",
        "position": {
          "x": 0.528,
          "y": 0.8893,
        },
        "simpleRole": "speaker-2.secondary",
        "weight": 400,
      },
    ],
  },
  "format": "story",
}
`;
